feat: adjusts styles in anchor

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,13 @@ input {
   outline: none;
   cursor: pointer;
 }
+a {
+  color: inherit;
+  transition: 0.5s;
+}
+a:hover {
+  opacity: 0.7;
+}
 ::placeholder {
   font-size: 17px;
 }
